-
Bug
-
Resolution: Done
-
P2: Important
-
6.0.2
-
None
-
-
004189b2d8e751021f26d9eb28948f753ea8208c (qt/qtbase/dev) a474d8a9be11f840c26d8a12586b9d11b6027015 (qt/qtbase/6.1) 8eeae7ae073ddd71a9210c0d3d1edaa6c199f509 (qt/qtbase/6.0)
While trying to load the attached SVG, an assert is triggered in qrasterizer.cpp:101 : "coverage >= 0 && coverage <= 255"
This file seems to be okay on every software I've been able to check it on, but I'm open to any suggestion if something should absolutely not be done in an SVG to be rendered with Qt.
If it can be of any help, I'm loading it in the QPixmap ctor (eg. someExamplePixmap(":/path/to/file") ) and the file is loaded from a resource (qrc) file.
- relates to
-
QTBUG-92485 Q_ASSERT added in qrasterizer.cpp
-
- Closed
-
For Gerrit Dashboard: QTBUG-91957 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
343179,3 | Fix partial pixel coverage calculation | dev | qt/qtbase | Status: MERGED | +2 | 0 |
343258,2 | Fix partial pixel coverage calculation | 6.1 | qt/qtbase | Status: MERGED | +2 | 0 |
343259,2 | Fix partial pixel coverage calculation | 6.0 | qt/qtbase | Status: MERGED | +2 | 0 |